Bug 53634 - REGRESSION(r76147): Slider thumb position is not updated when value attribute is changed.
Summary: REGRESSION(r76147): Slider thumb position is not updated when value attribute...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Dimitri Glazkov (Google)
URL:
Keywords:
Depends on:
Blocks: 52464
  Show dependency treegraph
 
Reported: 2011-02-02 15:43 PST by Dimitri Glazkov (Google)
Modified: 2011-02-03 09:28 PST (History)
1 user (show)

See Also:


Attachments
Patch (10.16 KB, patch)
2011-02-02 15:51 PST, Dimitri Glazkov (Google)
tkent: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dimitri Glazkov (Google) 2011-02-02 15:43:34 PST
REGRESSION(r76147): Slider thumb position is not updated when value attribute is changed.
Comment 1 Dimitri Glazkov (Google) 2011-02-02 15:51:17 PST
Created attachment 80985 [details]
Patch
Comment 2 Kent Tamura 2011-02-03 03:24:59 PST
Comment on attachment 80985 [details]
Patch

Looks good except the ChangeLog diff.
Comment 3 Dimitri Glazkov (Google) 2011-02-03 09:09:47 PST
(In reply to comment #2)
> (From update of attachment 80985 [details])
> Looks good except the ChangeLog diff.

Thanks, I'll update the ChangeLog when landing.
Comment 4 Dimitri Glazkov (Google) 2011-02-03 09:28:49 PST
Committed r77500: <http://trac.webkit.org/changeset/77500>